Smaller cover size for Issue show page on mobile devices.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -689,6 +689,9 @@ blockquote.pull-left {
 		width: 42%;
 		height: auto;
 	}
+	.issue-article.keynote img {
+		width: 45%;
+	}
 }
  
 /* Landscape phone to portrait tablet */
